# stockfish-cluster

./: .gitignore  readme.md
src/: CMakeLists.txt  main.cpp  server.py
src/app/: IHistoryRepository.hpp  IServerConfigRepository.hpp  IccfSyncManager.cpp  IccfSyncManager.hpp  JobManager.cpp  JobManager.hpp  JobSnapshotMerger.hpp  ServerManager.cpp  ServerManager.hpp
src/domain/: chess_san_to_fen.cpp  chess_san_to_fen.hpp  domain_model.hpp
src/domain/pgn/: PgnParser.cpp  PgnParser.hpp  PgnStreamScanner.cpp  PgnStreamScanner.hpp
src/infra/: HistoryRepository.cpp  HistoryRepository.hpp  ServerConfigRepository.cpp  ServerConfigRepository.hpp
src/infra/iccf/: IccfModels.hpp  IccfXfccParser.cpp  IccfXfccParser.hpp
src/infra/refdb/: ReferenceDbRepository.cpp  ReferenceDbRepository.hpp
src/net/: JobConnection.cpp  JobConnection.hpp  JobNetworkController.cpp  JobNetworkController.hpp
src/net/iccf/: IccfXfccSoap.cpp  IccfXfccSoap.hpp
src/ui/: BoardWidget.cpp  BoardWidget.hpp  GameViewerDialog.cpp  GameViewerDialog.hpp  IccfGamesModel.cpp  IccfGamesModel.hpp  JobExporter.cpp  JobExporter.hpp  JobsModel.cpp  JobsModel.hpp  MainWindow.cpp  MainWindow.hpp  ServersModel.cpp  ServersModel.hpp  UiFormatters.cpp  UiFormatters.hpp
